--- a/virtual_lab/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/virtual_lab/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Tue Aug 27 15:56:10 EST 2013
-#Tue Aug 27 15:56:10 EST 2013
+#Updated at Wed Aug 28 13:58:26 EST 2013
+#Wed Aug 28 13:58:26 EST 2013
 application_name=HuNI Virtual Laboratory
 label_au_net_huni_model_datasource=Data Source
 label_au_net_huni_model_datasource_description=Description
@@ -70,14 +70,6 @@ label_au_net_huni_model_researcher_roles=Roles
 label_au_net_huni_model_researcher_toolkit=Toolkit
 label_au_net_huni_model_researcher_username=User Name
 label_au_net_huni_model_researcher_version=Version
-label_au_net_huni_model_toollibraryitem=Tool Library Item
-label_au_net_huni_model_toollibraryitem_categories=Categories
-label_au_net_huni_model_toollibraryitem_description=Description
-label_au_net_huni_model_toollibraryitem_id=Id
-label_au_net_huni_model_toollibraryitem_name=Name
-label_au_net_huni_model_toollibraryitem_plural=Tool Library Items
-label_au_net_huni_model_toollibraryitem_url=Url
-label_au_net_huni_model_toollibraryitem_version=Version
 label_au_net_huni_model_toolcategory=Tool Category
 label_au_net_huni_model_toolcategory_categories=Categories
 label_au_net_huni_model_toolcategory_id=Id
@@ -85,13 +77,17 @@ label_au_net_huni_model_toolcategory_name=Name
 label_au_net_huni_model_toolcategory_plural=Tool Categorys
 label_au_net_huni_model_toolcategory_version=Version
 label_au_net_huni_model_toollibraryitem=Tool Library Item
+label_au_net_huni_model_toollibraryitem_author=Author
 label_au_net_huni_model_toollibraryitem_categories=Categories
+label_au_net_huni_model_toollibraryitem_creationdate=Creation Date
 label_au_net_huni_model_toollibraryitem_description=Description
 label_au_net_huni_model_toollibraryitem_id=Id
 label_au_net_huni_model_toollibraryitem_name=Name
 label_au_net_huni_model_toollibraryitem_plural=Tool Library Items
+label_au_net_huni_model_toollibraryitem_softwareversion=Software Version
 label_au_net_huni_model_toollibraryitem_url=Url
 label_au_net_huni_model_toollibraryitem_version=Version
+label_au_net_huni_model_toollibraryitem_version_=Version_
 label_au_net_huni_model_toolparameter=Tool Parameter
 label_au_net_huni_model_toolparameter_amount=Amount
 label_au_net_huni_model_toolparameter_displayorder=Display Order
@@ -114,7 +110,6 @@ menu_category_institution_label=Institution
 menu_category_project_label=Project
 menu_category_registration_label=Registration
 menu_category_researcher_label=Researcher
-menu_category_toollibraryitem_label=Tool Library Item
 menu_category_toolcategory_label=Tool Category
 menu_category_toollibraryitem_label=Tool Library Item
 menu_category_toolparameter_label=Tool Parameter
@@ -134,8 +129,6 @@ menu_item_registration_list_label=Registrations
 menu_item_registration_new_label=Registration
 menu_item_researcher_list_label=Researchers
 menu_item_researcher_new_label=Researcher
-menu_item_toollibraryitem_list_label=Tool Library Items
-menu_item_toollibraryitem_new_label=Tool Library Item
 menu_item_toolcategory_list_label=Tool Categorys
 menu_item_toolcategory_new_label=Tool Category
 menu_item_toollibraryitem_list_label=Tool Library Items
