--- a/virtual_lab/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/virtual_lab/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,11 +1,12 @@
-#Updated at Fri Aug 30 10:15:44 EST 2013
-#Fri Aug 30 10:15:44 EST 2013
+#Updated at Sun Sep 01 16:29:24 EST 2013
+#Sun Sep 01 16:29:24 EST 2013
 application_name=HuNI Virtual Laboratory
 label_au_net_huni_model_datasource=Data Source
 label_au_net_huni_model_datasource_description=Description
 label_au_net_huni_model_datasource_id=Id
 label_au_net_huni_model_datasource_importdate=Import Date
 label_au_net_huni_model_datasource_name=Name
+label_au_net_huni_model_datasource_owner=Owner
 label_au_net_huni_model_datasource_plural=Data Sources
 label_au_net_huni_model_datasource_version=Version
 label_au_net_huni_model_feedbackitem=Feedback Item
@@ -38,6 +39,7 @@ label_au_net_huni_model_project=Project
 label_au_net_huni_model_project_datasources=Data Sources
 label_au_net_huni_model_project_id=Id
 label_au_net_huni_model_project_name=Name
+label_au_net_huni_model_project_owner=Owner
 label_au_net_huni_model_project_plural=Projects
 label_au_net_huni_model_project_startdate=Start Date
 label_au_net_huni_model_project_version=Version
